--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,16 +4,42 @@ spring.application.name=bs-assistant-bot
 # Server
 server.port=8080
 
+# Allow circular references (required by EG Fabric Platform)
+spring.main.allow-circular-references=true
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.redis.enabled=false
+
 # Security - Public Key for JWT Verification
 # TODO: Replace with actual public key from platform team
-key.public=
+key.public=MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA
+
+# Global Security Key (for permission fetching)
+global.securityKey=dev-secret-key-change-in-production
 
 # Access Filter Patterns
 access.filter.patterns=/api/**
 
-# Access Manager
+# Access Manager Configuration
 apps.accessManager.baseUrl=https://access-manager.eg.dk
+
+# Service Configuration
+apps.service.id=bs-assistant-bot
+apps.service.name=BS Assistant Bot
+apps.service.description=BS Assistant Bot Service
+apps.service.register=false
 
 # Logging
 logging.level.root=INFO
 logging.level.no.eg=DEBUG
+
+# Spring Cloud Config Server
+spring.config.import=optional:configserver:https://config-server.cloud.test.egapps.no
+spring.cloud.config.fail-fast=false
+spring.cloud.config.enabled=true
